# DecoupledGaussian

./: .gitignore  README.md  gs_simulation.py  gs_simulation_multiobject.py  requirements.txt
config/: bear_config.json
dataset/bear_data/: cameras.json
gaussian-splatting/scene/: gaussian_model.py
organize_code/: README.md  requirements.txt
organize_code/GaussianSplattingLightning/: .gitignore  .gitmodules  LICENSE.md  README.md  convert.py  main.py  render.py  requirements.txt  rotate_gaussians.py  run.sh  seganygs.py  test.py  viewer.py
organize_code/GaussianSplattingLightning/configs/: .gitignore  appearance.yaml  background_sphere-cameras_center-random_background.yaml  background_sphere.yaml  blender.yaml  blender_gsplat.yaml  colmap_exp.yaml  ddp.yaml  ddp_not_find_unused.yaml  deformable_6dof_blender.yaml  deformable_6dof_real.yaml  deformable_blender.yaml  deformable_blender_rotate_xyz.yaml  deformable_real.yaml  distributed.yaml  gsplat-absgrad-experiment.yaml  gsplat-absgrad.yaml  gsplat-matrixcity-aerial.yaml  gsplat-mcmc.yaml  (+12 more)
organize_code/JointPointFields/: step1_poisson_recons.py  step2_get_coarse_obj.py  step3_repair_scene_gaussian.py
organize_code/PGSR/: render.py  render_orientnormals.py  run.sh  train.py  train_obj.py  train_surface.py
organize_code/mask_inpaint/: LAMA_impaint.py  mask_app.py
organize_code/weights/simple-lama-inpainting/: pyproject.toml
organize_code/weights/simple-lama-inpainting/simple_lama_inpainting/models/: model.py
particle_filling/: filling.py
utils/: camera_view_utils.py  decode_param.py  render_utils.py
(+173 files in other folders)
