[tool.poetry]
name = "simple-lama-inpainting"
version = "0.1.2"
description = ""
authors = ["enesmsahin <enessahin@outlook.com>"]
readme = "README.md"
packages = [{include = "simple_lama_inpainting"}]

[tool.poetry.dependencies]
fire = "^0.5.0"

[tool.poetry.scripts]
simple_lama = "simple_lama_inpainting.cli:lama_cli"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
flake8 = "^6.0.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
